fix: Adjust header font size from 24px to 20px for improved readability

--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -25,7 +25,7 @@ header {
         width: 100%;
         border: unset;
         outline: none;
-        font-size: 24px;
+        font-size: 20px;
         font-weight: 400;
 
         &::placeholder {
